create btn-primary and change the header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header>
+    <a>Home</a>
+    <div class="menu">
+        <a>Projects</a>
+        <btn-primary
+            text="contact me">
+        </btn-primary>
+    </div>
+</header>
