--- a/src/app/shared/main-section/main-section.component.html
+++ b/src/app/shared/main-section/main-section.component.html
@@ -1,1 +1,9 @@
-<p>main-section works!</p>
+<section>
+    <div class="main-content">
+        <span>SOFTWARE DEVELOPER</span>
+        <h1>OLÁ</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia error molestiae nesciunt non ullam et doloremque quisquam asperiores placeat repudiandae, similique repellat blanditiis. Vero minima saepe tempore nihil laboriosam molestiae!</p>
+        <btn-primary text="download cv"></btn-primary>
+    </div>
+    <main-animation></main-animation>     
+</section>
