--- a/src/app/shared/main-section/main-section.component.html
+++ b/src/app/shared/main-section/main-section.component.html
@@ -1,8 +1,8 @@
 <section>
     <div class="main-content">
         <span>SOFTWARE DEVELOPER</span>
-        <h1>OI</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia error molestiae nesciunt non ullam et doloremque quisquam asperiores placeat repudiandae, similique repellat blanditiis. Vero minima saepe tempore nihil laboriosam molestiae!</p>
+        <h1>Lucas Muniz</h1>
+        <p>Olá, sou Lucas Muniz e sou um desenvolvedor de software e bacharelando em Sistemas de Informação</p>
         <btn-primary text="download cv"></btn-primary>
     </div>
     <main-animation></main-animation>     
