adding last name

--- a/src/app/shared/main-section/main-section.component.html
+++ b/src/app/shared/main-section/main-section.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="main-content">
         <span>SOFTWARE DEVELOPER</span>
-        <h1>Lucas Muniz</h1>
+        <h1>Lucas Muniz de Lima</h1>
         <p>Olá, sou Lucas Muniz e sou um desenvolvedor de software e bacharelando em Sistemas de Informação</p>
         <btn-primary text="download cv"></btn-primary>
     </div>
