changing the html

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="menu">
         <a>Projects</a>
         <btn-primary
-            text="contact me">
+            text="Contact me">
         </btn-primary>
     </div>
 </header>
