--- a/src/app/shared/main-section/main-section.component.html
+++ b/src/app/shared/main-section/main-section.component.html
@@ -1,9 +1,9 @@
 <section>
     <div class="main-content">
         <span>SOFTWARE DEVELOPER</span>
-        <h1>Lucas Muniz de Lima</h1>
-        <p>Olá, sou Lucas Muniz e sou um desenvolvedor de software e bacharelando em Sistemas de Informação</p>
-        <btn-primary text="download cv"></btn-primary>
+        <h1>Lucas Muniz</h1>
+        <p>Olá, me chamo Lucas Muniz, bacharelando em Sistemas de Informação e apaixonado por desenvolvimento de software</p>
+        <btn-primary text="Download cv"></btn-primary>
     </div>
     <main-animation></main-animation>     
 </section>
